package com.example.design.Proxy;

public interface Image {
   void display();
}