@startuml
'https://plantuml.com/class-diagram

interface Image{
    void display();
}
note left:  抽象主题

class RealImage implements Image{
    String fileName;
    void display();
    void loadFromDisk();
}
note left:  真实主题

class ProxyImage implements Image{
    RealImage realImage;
    String fileName;
    void display();
}
note left:  代理
class Client{
    void main();
}
note left:  客户端
Client -->  ProxyImage:访问
ProxyImage --> RealImage:创建

@enduml